--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.124.94</domain>
+        <domain includeSubdomains="true">www.kuaidi100.com</domain>
     </domain-config>
 
     <base-config cleartextTrafficPermitted="true">
